--- a/p2p/templates/transfer.html
+++ b/p2p/templates/transfer.html
@@ -5,6 +5,7 @@
      
       <div class="form-column">
         <div class="form-group col-md-6">
+          <span>Balance : </span>
           <span name='trans_balance' id='trans_balance'>{{ balance }}</span>
           {# <input name='trans_balance' id='trans_balance' value='50000' readonly> #}
         </div>
