--- a/p2p/templates/fund_account.html
+++ b/p2p/templates/fund_account.html
@@ -11,22 +11,22 @@
 
         <div class="form-group col-md-6">
           <label for="email">Email</label>
-          <input type="email" name='email' class="form-control" id="email" placeholder="Email">
+          <input type="email" name='email' class="form-control" id="email" placeholder="Email" required>
         </div>
 
         <div class="form-group col-md-6">
           <label for="amount">Amount</label>
-          <input type="text" name='amount' class="form-control" id="amount" placeholder="Amount">
+          <input type="text" name='amount' class="form-control" id="amount" placeholder="Amount" required>
         </div>
         
         <div class="form-group col-md-6">
           <label for="first-name">First Name</label>
-          <input type="text" name= 'first-name' class="form-control" id="first-name" placeholder="First Name">
+          <input type="text" name= 'first-name' class="form-control" id="first-name" placeholder="First Name" required>
         </div>
 
         <div class="form-group col-md-6">
           <label for="last-name">Last Name</label>
-          <input type="text" name= 'last-name' class="form-control" id="last-name" placeholder="Last Name">
+          <input type="text" name= 'last-name' class="form-control" id="last-name" placeholder="Last Name" required>
         </div>
 
         <div class="form-group col-md-6">
