--- a/p2p/templates/login.html
+++ b/p2p/templates/login.html
@@ -6,12 +6,12 @@
 
             <div class="form-group col-md-6">
             <label for="email">Email</label>
-            <input type="email" class="form-control" name ='email' id="email" placeholder="Email">
+            <input type="email" class="form-control" name ='email' id="email" placeholder="Email" required>
             </div>
         
             <div class="form-group col-md-6">
             <label for="password">Password</label>
-            <input type="password" class="form-control" name = 'password' id="password" placeholder="Password">
+            <input type="password" class="form-control" name = 'password' id="password" placeholder="Password"  required>
             </div>
             
             <div class="form-group col-md-6">
