--- a/p2p/templates/signup.html
+++ b/p2p/templates/signup.html
@@ -7,22 +7,22 @@
 
             <div class="form-group col-md-6">
             <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" name='name' placeholder="Name">
+            <input type="text" class="form-control" id="name" name='name' placeholder="Name" required>
             </div>
 
             <div class="form-group col-md-6">
             <label for="email">Email</label>
-            <input type="email" class="form-control" id="email" name ='email' placeholder="Email">
+            <input type="email" class="form-control" id="email" name ='email' placeholder="Email" required>
             </div>
 
             <div class="form-group col-md-6">
             <label for="password">Phone Number</label>
-            <input type="tel" class="form-control" id="phone" name='phone' placeholder="Phone Number">
+            <input type="tel" class="form-control" id="phone" name='phone' placeholder="Phone Number" required>
             </div>
 
             <div class="form-group col-md-6">
             <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" name='password' placeholder="Password">
+            <input type="password" class="form-control" id="password" name='password' placeholder="Password" required>
             </div>
 
             <div class="form-group col-md-6">
