--- a/p2p/templates/transfer.html
+++ b/p2p/templates/transfer.html
@@ -11,12 +11,12 @@
 
         <div class="form-group col-md-6">
           <label for="name">Name</label>
-          <input type="text" class="form-control" name = 'name' id="name" placeholder="Name">
+          <input type="text" class="form-control" name = 'name' id="name" placeholder="Name" required>
         </div>
 
         <div class="form-group col-md-6">
           <label for="amount">Amount</label>
-          <input type="num" class="form-control" name = 'amount' id="amount" placeholder="Amount">
+          <input type="num" class="form-control" name = 'amount' id="amount" placeholder="Amount" required>
         </div>
 
         <div class="form-group col-md-6">
@@ -33,9 +33,9 @@
             {% endif %}
           </select>
         </div>
+      <button type="submit" class="btn btn-primary">Transfer</button>
 
       </div>
-      <button type="submit" class="btn btn-primary">Transfer</button>
       
     </form>
         
